--- a/src/App/views/portal-user/beachResort.view.twig
+++ b/src/App/views/portal-user/beachResort.view.twig
@@ -15,24 +15,22 @@
 </section>
 
     <section class="reserveUnit">
-        <form id="reservationForm">
+        <form id="reservationForm" method="post" action="/beachResort">
             <fieldset id = "reservation">
-                <p>
-                    <label>
-                        Llegada:
-                    </label>
-                    <input type="date" id="startDate" name="startDate" {% if start_date is not null %}value="{{ start_date }}" {% endif %}/>
-                </p>
-                <p>
-                    <label>
-                        Salida:
-                    </label>
-                    <input type="date" id="endDate" name="endDate" {% if end_date is not null %}value="{{ end_date }}" {% endif %}/>
-                </p>
+                <label>
+                    Llegada:
+                </label>
+                <input type="date" id="startDate" name="startDate" {% if start_date is not null %}value="{{ start_date }}" {% endif %}/>
+                <label>
+                    Salida:
+                </label>
+                <input type="date" id="endDate" name="endDate" {% if end_date is not null %}value="{{ end_date }}" {% endif %}/>
                 <object  type="image/svg+xml" data="./../imagenes/beachResorts/{{ beachResort.fields.id }}/complejo.svg" id="svgImage"></object>
 
                 <p id="lastUnit"></p>
                 <p id="ticket"></p>
+
+                <input type="hidden" id="selectedUnits" name="selectedUnits" value="" />
 
                 <input type="button" value="Continuar" class="bContinuar" id="continueBtn"></input>
 
