--- a/src/App/views/portal-user/beachResort.view.twig
+++ b/src/App/views/portal-user/beachResort.view.twig
@@ -31,6 +31,9 @@
                 <p id="ticket"></p>
 
                 <input type="hidden" id="selectedUnits" name="selectedUnits" value="" />
+                <input type="hidden" id="beachResortId" name="beachResortId" value="{{ beachResort.fields.id }}" />
+                <input type="hidden" id="beachResortName" name="beachResortName" value="{{ beachResort.fields.name }}" />
+                <input type="hidden" id="reservationAmount" name="reservationAmount" value="" />
 
                 <input type="button" value="Continuar" class="bContinuar" id="continueBtn"></input>
 
