--- a/src/App/views/portal-user/reservationConfirmation.view.twig
+++ b/src/App/views/portal-user/reservationConfirmation.view.twig
@@ -5,6 +5,8 @@
 <section id="beachResortData" class="ticket">
   <label>Balneario: {{ data.beachResortName }}</label>
   <label>Fecha desde: {{ data.startDate }}</label>
+    <label>Fecha Hasta: {{ data.endDate }}</label>
+
 </section>
 
 {% endblock main %}
