Integracion con MP comienzo

--- a/src/App/views/portal-user/reservationConfirmation.view.twig
+++ b/src/App/views/portal-user/reservationConfirmation.view.twig
@@ -11,8 +11,23 @@
   <label>Unidad: {{ unit }}</label>
    {%endfor%}
   <label>Precio:  ${{ data.reservationAmount }}</label>
+  <form  method="post" action="/makePayment">
+    <fieldset id = "reservation">
+      <input type="hidden" name="reservationAmount" value="{{ data.reservationAmount }}" />
+      <input type="submit"  id="mercadoPago" value = "Pagar"></input>
+    </fieldset>
+     <div id="wallet_container"></div>
+     
+  </form>            
   
 
 </section>
 
 {% endblock main %}
+{% {% block javascript %}
+  <script src="https://sdk.mercadopago.com/js/v2">
+      const mp = new MercadoPago('YOUR_PUBLIC_KEY');
+      const bricksBuilder = mp.bricks();
+  </script>
+
+{% endblock %} %}
