--- a/src/App/views/portal-user/login.view.twig
+++ b/src/App/views/portal-user/login.view.twig
@@ -18,7 +18,9 @@
                     </label>
                     <input name="login" type="submit" value="Ingresar">
                     {% if mensajeError %}
-                        <p> {{ mensajeError }}</p>
+                        <div class="error-message">
+                            {{ mensajeError }}
+                        </div>
                     {% endif %}
                 </form>
             {% endif %}
