--- a/src/App/views/portal-user/beachResort.view.twig
+++ b/src/App/views/portal-user/beachResort.view.twig
@@ -25,7 +25,7 @@
                     Salida:
                 </label>
                 <input type="date" id="endDate" name="endDate" {% if end_date is not null %}value="{{ end_date }}" {% endif %}/>
-                <object  type="image/svg+xml" data="./../imagenes/beachResorts/{{ beachResort.fields.id }}/complejo.svg" id="svgImage"></object>
+                <object  type="image/svg+xml" data="./../imagenes/beachResorts/svgs/{{ beachResort.fields.name }}.svg" id="svgImage"></object>
 
                 <p id="lastUnit"></p>
                 <p id="ticket"></p>
