--- a/src/App/views/parts/head.view.twig
+++ b/src/App/views/parts/head.view.twig
@@ -10,6 +10,7 @@
      <link rel="icon" type="image/png" href="./../imagenes/logo.png">
     <script src="../../scripts/classPaw.js"></script>
     <script src="../../scripts/app.js"></script>
+      <script src="https://sdk.mercadopago.com/js/v2"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap" rel="stylesheet">
