--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -884,3 +884,7 @@ fieldset p{
   margin-right: 10px;        /* Espaciado entre el ícono y el texto */
   font-size: 18px;           /* Tamaño del ícono */
 }
+
+.reservationData {
+  display: flex;
+}
