--- a/src/App/views/portal-user/reservationConfirmation.view.twig
+++ b/src/App/views/portal-user/reservationConfirmation.view.twig
@@ -10,7 +10,7 @@
    {% for unit in data.selectedUnits %}
   <label>Unidad: {{ unit }}</label>
    {%endfor%}
-  <label>Precio:  ${{ data.reservationAmount }}</label>        
+  <label class="price-label">Precio:  ${{ data.reservationAmount }}</label>        
 
  <div id="wallet_container">
     </div>
