--- a/src/App/views/portal-admin/newBeachResort.view.twig
+++ b/src/App/views/portal-admin/newBeachResort.view.twig
@@ -15,6 +15,35 @@
         <label for="imagen">Aquí debes cargar la imagen de distribucion de carpas y sombrillas en formato SVG:</label>
         <input type="file" id="imagen" name="imagen_svg" accept="image/*">
 
+        <section>
+            <h2>Servicios Disponibles:</h2>
+            <div>
+                <input type="checkbox" id="pileta" name="services[]" value="1">
+                <label for="pileta">Pileta</label>
+            </div>
+            <div>
+                <input type="checkbox" id="spa" name="services[]" value="2">
+                <label for="spa">SPA</label>
+            </div>
+            <div>
+                <input type="checkbox" id="masajes" name="services[]" value="3">
+                <label for="masajes">Masajes</label>
+            </div>
+            <div>
+                <input type="checkbox" id="barra" name="services[]" value="4">
+                <label for="barra">Barra</label>
+            </div>
+            <div>
+                <input type="checkbox" id="restaurant" name="services[]" value="5">
+                <label for="restaurant">Restaurant</label>
+            </div>
+            <div>
+                <input type="checkbox" id="bano" name="services[]" value="6">
+                <label for="bano">Baño</label>
+            </div>
+        </section>
+
+
         <label for="precioCarpas">Precio carpas:</label>
         <input type="text" name="precioCarpas" required>
 
