--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -31,11 +31,11 @@
 
 body {
     margin: 0;
-    font-family: 'Roboto', Arial, sans-serif;
+    font-family: Arial, sans-serif;
     /* background: var(--background-light); */
-    color: var(--text);
+    color: #333;
     line-height: 1.6;
-    background-image: url('./../imagenes/background.jpg');
+    /*background-image: url('./../imagenes/background.jpg'); */
     background-size: cover; /* Para cubrir todo el fondo */
     background-position: center; /* Centrar la imagen */
     background-repeat: no-repeat; /* Evitar que se repita la imagen */
@@ -52,18 +52,18 @@ header > figure > img {
 }
 
 nav {
+  display: flex;
   background-color: rgba(0, 0, 0, 0.75);
   border-bottom: 1px solid #dddddd;
-  position: sticky;
   top: 0;
   z-index: 9999;
 }
 
 .btnLocalizar {
   width: 25%;
-  padding: 5px;
   border-radius: 5px;
   background-color: #df954d;
+  margin-bottom: 1rem;
   color: white;
   font-weight: bold;
 }
@@ -115,11 +115,130 @@ nav ul li a:hover {
   color: #007bff;
 }
 
-/* nav img {
-  height: 5em;
-  margin-right: 10px;
-} */
+.ciudad-container {
+  position: relative;
+}
 
+.selectCiudades {
+  width: 100%;
+  padding: 12px;
+  border: 2px solid #007bff;
+  border-radius: 8px;
+  font-size: 16px;
+  transition: border-color 0.3s;
+}
+
+.selectCiudades:focus {
+  border-color: #0056b3;
+  outline: none;
+}
+
+.cities-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background: #fff;
+  border: 2px solid #007bff;
+  border-top: none;
+  position: absolute;
+  width: calc(100% - 4px);
+  max-height: 180px;
+  overflow-y: auto;
+  z-index: 1000;
+  display: none;
+  border-radius: 0 0 8px 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.cities-list li {
+  padding: 12px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.cities-list li:hover {
+  background-color: #f1f1f1;
+}
+
+.bReserva {
+  display: inline-block;
+  background-color: #007bff;
+  color: #fff;
+  padding: 12px 25px;
+  border-radius: 8px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+
+.bReserva:hover {
+  background-color: #0056b3;
+}
+
+.reservar-pasos {
+  background: #f5f5f5;
+  padding: 50px 20px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  margin-bottom: 40px;
+}
+
+.reservar-pasos h2 {
+  font-size: 2.5rem;
+  margin-bottom: 30px;
+  color: #333;
+  font-weight: 600;
+}
+
+.pasos-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.paso {
+  display: flex;
+  align-items: center;
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.paso:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 12px 24px rgba(0, 0, 0, 0.15);
+}
+
+.paso-icon {
+  flex-shrink: 0;
+  margin-right: 20px;
+}
+
+.paso-icon img {
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+}
+
+.paso-info {
+  text-align: left;
+}
+
+.paso-info h3 {
+  font-size: 1.5rem;
+  margin: 0 0 10px;
+  color: #007bff;
+  font-weight: 500;
+}
+
+.paso-info p {
+  font-size: 1rem;
+  color: #666;
+}
 
 h3{
   font-family: "Abril Fatface", serif;
@@ -136,6 +255,39 @@ h3{
   box-shadow: -20px 13px 40px -11px rgba(0, 0, 0, 0.75);
   color: #fff;
 } */
+
+.testimonials {
+  background: linear-gradient(to right, #e9ecef, #f8f9fa);
+  padding: 30px;
+  border-radius: 12px;
+  text-align: center;
+  margin-bottom: 30px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.testimonial {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  background-color: #fff;
+  margin-bottom: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.testimonial p {
+  font-style: italic;
+  font-size: 1rem;
+}
+
+.testimonial cite {
+  display: block;
+  margin-top: 10px;
+  font-weight: bold;
+  color: #555;
+}
+
 
 .bNew, .bContinuar, button {
   display: block;
@@ -188,40 +340,110 @@ h2{
     line-height: 1.8;
 }
 
-.newBeachResort, .newCity {
-  width: 50%;
-  text-align: center;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  border-radius: 10px;
-  gap: 15px;
-  margin-bottom: 50px;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-  background-color: rgba(255, 255, 255, 0.3);
+  /* Estilos del formulario */
+  form.newBeachResort {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
 }
 
-.newBeachResort .bReserva {
-  margin-top: 30px;
+/* Estilos para los servicios disponibles */
+.services-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 20px;
 }
 
-.newBeachResort label {
+.service-card {
+    flex: 1 1 30%;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    transition: box-shadow 0.3s ease;
+}
+
+.service-card:hover {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.service-card input[type="checkbox"] {
+    transform: scale(1.5);
+    margin-right: 10px;
+}
+
+.service-card label {
+    font-size: 16px;
+    color: #333;
+}
+
+/* Resto del formulario */
+form.newBeachResort label {
+    display: block;
+    margin: 10px 0 5px;
+    font-weight: bold;
+}
+
+form.newBeachResort input[type="text"],
+form.newBeachResort textarea,
+form.newBeachResort select,
+form.newBeachResort input[type="file"] {
+    width: 100%;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+}
+
+form.newBeachResort textarea {
+    resize: vertical;
+    height: 100px;
+}
+
+form.newBeachResort .conteinerBtnLocalizar {
+    text-align: center;
+}
+
+form.newBeachResort .bReserva {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+form.newBeachResort .bReserva:hover {
+    background-color: #0056b3;
+}
+
+.map {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+}
+
+.required {
+  color: red;
   font-weight: bold;
 }
 
-.newCity .bReserva {
-  margin-top: 30px;
-}
-
-.newCity label {
+.required-message {
+  color: red;
   font-weight: bold;
-}
-
-
-.newBeachResort textarea {
-  max-width: 99%;
-  min-width: 99%;
+  margin-bottom: 20px;
 }
 
 figure {
@@ -231,46 +453,77 @@ figure {
 }
 
 footer {
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0.75);
-    text-align: center;
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 10%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  position: absolute;
+  width: 100%;
+  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
 }
 
-footer > a {
-    text-decoration: none;
-    font-size: 1.2rem;
+footer .footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-footer > a > i {
+footer h3 {
+  margin: 0 0 20px;
   font-size: 1.5rem;
+  color: white;
 }
 
-footer > a {
-    display: flex;
-    flex-direction: column;
-    color: white;
+footer ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
-footer .whatsapp > i {
-  color: green;
+footer li {
+  margin: 0;
 }
 
-footer .phone > i {
-    color: green;
+footer a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1rem;
+  transition: color 0.3s;
 }
 
-
-footer .facebook > i {
-  color: blue;
+footer a:hover {
+  color: #ddd;
 }
 
-footer .instagram > i {
-  color: #c92bb7;
+.social-media {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 20px 0;
+}
+
+.social-media a {
+  display: inline-block;
+}
+
+.social-media img {
+  width: 24px;
+  height: 24px;
+}
+
+.footer-bottom {
+  border-top: 1px solid #444;
+  padding-top: 20px;
+  font-size: 0.875rem;
+  color: #bbb;
+}
+
+footer p {
+  color: white;
 }
 
 .botonLogin {
@@ -290,30 +543,22 @@ footer .instagram > i {
 
 .reserva {
   display: flex;
+  margin-right: 2em;
   justify-content: center;
+  position: absolute;
+  right: 0;
+  margin-top: 2rem;
   gap: 1.5rem;
   align-items: center;
-  margin-top: 20px;
 }
 
 .reserva > label,select,input {
   font-size: 1rem;
   border-radius: 0.3rem;
-  padding: 5px;
-
 }
 
 .reserva > select, input{
-  padding: 0.5em;
   background-color: rgba(255, 255, 255, 0.7);
-}
-
-.bReserva {
-  padding: 1em;
-  border-radius: 10px;
-  background-color:  var(--principal-color1);
-  box-shadow: -20px 13px 40px -11px rgba(0, 0, 0, 0.75);
-  color: #fff;
 }
 
 .login section{
@@ -793,8 +1038,6 @@ section a {
   color: #555;
   margin-bottom: 20px;
 }
-
-
 
 /* Service Item */
 .service-item {
