--- a/src/App/views/parts/footer.view.twig
+++ b/src/App/views/parts/footer.view.twig
@@ -1,9 +1,19 @@
-
-    <footer id="footer">
-        <a class="email" href="#"><i class="fa-solid fa-envelope"></i> info@tuempresa.com</a>
-        <a class="whatsapp" href="https://wa.me/2346505022" target="_blank" class="whatsApp"><i class="fa-brands fa-whatsapp"></i> 2346505022</a>
-        <a class="facebook" href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
-        <a class="phone" href="#"><i class="fa-solid fa-phone"></i> +123456789</a>
-        <a class="instagram" href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-    </footer>
-
+<footer>
+    <div class="footer-content">
+        <h3>Contacto y Enlaces</h3>
+        <ul>
+            <li><a href="#">Sobre Nosotros</a></li>
+            <li><a href="#">Política de Privacidad</a></li>
+            <li><a href="#">Términos de Servicio</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+        <div class="social-media">
+            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2024 Tu Empresa. Todos los derechos reservados.</p>
+    </div>
+</footer>
