--- a/src/App/views/parts/nav.view.twig
+++ b/src/App/views/parts/nav.view.twig
@@ -6,19 +6,21 @@
             </a>
         </li>
         {% for item in menu %}
-            {% if item.name == 'Acceso' %}
-                <li class="botonLogin">
-                    <a href="{{ item.href }}">
-                        {{ item.name }}
-                    </a>
-                </li>
-            {% else %}
-                <li class="dropdown">
-                    <a href="{{ item.href }}">
-                        {{ item.name }}
-                    </a>
-                </li>
-            {% endif %}
+            <li class="dropdown">
+                <a href="{{ item.href }}">
+                    {{ item.name }}
+                </a>
+            </li>
         {% endfor %}
     </ul>
+
+    <section class="reserva">
+            <div class="ciudad-container">
+                <input type="text" id="ciudad" name="ciudad" autocomplete="off" class="selectCiudades" placeholder="Ingrese una ciudad">
+                <ul id="cities-list" class="cities-list"></ul>
+                <input type="hidden" id="cityId" name="cityId" value="">
+            </div>
+            <a href="#" class="bReserva">Buscar</a>
+    </section>
+
 </nav>
