--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -54,7 +54,6 @@ header > figure > img {
 nav {
   display: flex;
   background-color: rgba(0, 0, 0, 0.75);
-  border-bottom: 1px solid #dddddd;
   top: 0;
   z-index: 9999;
 }
@@ -177,19 +176,13 @@ nav ul li a:hover {
 }
 
 .reservar-pasos {
-  background: #f5f5f5;
-  padding: 50px 20px;
+  padding-top: 20px;
   border-radius: 10px;
   text-align: center;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
   margin-bottom: 40px;
-}
-
-.reservar-pasos h2 {
-  font-size: 2.5rem;
-  margin-bottom: 30px;
-  color: #333;
-  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .pasos-container {
@@ -201,11 +194,13 @@ nav ul li a:hover {
 .paso {
   display: flex;
   align-items: center;
-  background: #fff;
+  background: #e1c7ae63;
   padding: 20px;
+  margin: 10px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s, box-shadow 0.3s;
+  width: 50%;
 }
 
 .paso:hover {
@@ -216,12 +211,7 @@ nav ul li a:hover {
 .paso-icon {
   flex-shrink: 0;
   margin-right: 20px;
-}
-
-.paso-icon img {
-  width: 60px;
-  height: 60px;
-  object-fit: contain;
+  width: 30px;
 }
 
 .paso-info {
@@ -257,7 +247,7 @@ h3{
 } */
 
 .testimonials {
-  background: linear-gradient(to right, #e9ecef, #f8f9fa);
+  background: linear-gradient(to right, #e1c7ae63, #f8f9fa);
   padding: 30px;
   border-radius: 12px;
   text-align: center;
@@ -306,17 +296,16 @@ h3{
   margin-bottom: 2%;
 }
 
-
-h1 {
-    font-family: "Abril Fatface", serif;
-    font-size: var(--main-header-title-size); /* Asegúrate de definir esta variable según tu necesidad */
-    color: #0077b6; /* Cambia el color a uno más vibrante */
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    padding-left: 2rem;
-}
-
 .titulo {
-    text-align: center;
+  font-size:14pt;
+  font-weight:bold;
+  margin-bottom:.5em;
+  display:flex;
+  align-items:center;
+  margin-bottom:1em;
+  padding-block:.7em;
+  padding-top:1em;
+  width: 100%;
 }
 
 p, ol {
@@ -745,8 +734,8 @@ article {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin: 1em;
   padding: 2em;
-  width: 15em;
-  height: 20em; 
+  width: 13em;
+  height: 13em; 
   text-align: center;
   transition: transform 0.2s;
   overflow: hidden; 
@@ -1183,4 +1172,3 @@ fieldset p{
 .ticket button:hover {
   background-color: #0056b3;
 }
-
