--- a/src/App/views/portal-user/index.view.twig
+++ b/src/App/views/portal-user/index.view.twig
@@ -2,60 +2,65 @@
 
 {% block main %}
     <main>
-        <h1 class="titulo">Bienvenidos al Paraíso Playero</h1>      
-
         <section class="center">
             <section class="carousel"></section>
         </section>
 
         <section class="reservar-pasos">
-        <h2>Cómo realizar una reserva</h2>
-        <div class="paso">
-            <div class="paso-icon">
-                <img src="search-icon.png" alt="Buscar">
+            <section class="titulo">
+                <h1>Cómo realizar una reserva</h1>      
+            </section>
+            <div class="paso">
+                <div class="paso-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+                <div class="paso-info">
+                    <h3>1. Buscar Balneario</h3>
+                    <p>Utiliza nuestro buscador para encontrar el balneario que mejor se ajuste a tus necesidades.</p>
+                </div>
             </div>
-            <div class="paso-info">
-                <h3>1. Buscar Balneario</h3>
-                <p>Utiliza nuestro buscador para encontrar el balneario que mejor se ajuste a tus necesidades.</p>
+            <div class="paso">
+                <div class="paso-icon">
+                    <i class="fa-solid fa-umbrella-beach"></i>
+                    <i class="fa-solid fa-tents"></i>
+                </div>
+                <div class="paso-info">
+                    <h3>2. Elegir Carpa o Sombrilla</h3>
+                    <p>Selecciona la carpa o sombrilla que prefieras para tu día de playa.</p>
+                </div>
             </div>
-        </div>
-        <div class="paso">
-            <div class="paso-icon">
-                <img src="select-icon.png" alt="Elegir">
+            <div class="paso">
+                <div class="paso-icon">
+                    <i class="fa-regular fa-credit-card"></i>
+                </div>
+                <div class="paso-info">
+                    <h3>3. Pagar por Mercado Pago</h3>
+                    <p>Realiza el pago a través de Mercado Pago para completar tu reserva.</p>
+                </div>
             </div>
-            <div class="paso-info">
-                <h3>2. Elegir Carpa o Sombrilla</h3>
-                <p>Selecciona la carpa o sombrilla que prefieras para tu día de playa.</p>
-            </div>
-        </div>
-        <div class="paso">
-            <div class="paso-icon">
-                <img src="payment-icon.png" alt="Pagar">
-            </div>
-            <div class="paso-info">
-                <h3>3. Pagar por Mercado Pago</h3>
-                <p>Realiza el pago a través de Mercado Pago para completar tu reserva.</p>
-            </div>
-        </div>
         </section>
 
         <section class= "card-container">
-            <h2>Ciudades</h2>
+            <section class="titulo">
+                <h1>Conocé las ciudades y sus balnearios</h1>      
+            </section>
             {% for city in cities   %}
-             <a href="/beachResortsCity?id={{ city.fields.id }}">
-                <article class="card">    
-                    <h3>{{ city.fields.name }}</h3>
-                    <figure>
-                        <img src="{{ city.fields.img }}" alt="{{ city.fields.name }}" >
-                    </figure>
-                    <p>Balnearios: 4</p>
-                </article> 
-                 </a>
+                <a href="/beachResortsCity?id={{ city.fields.id }}">
+                    <article class="card">    
+                        <h3>{{ city.fields.name }}</h3>
+                        <figure>
+                            <img src="{{ city.fields.img }}" alt="{{ city.fields.name }}" >
+                        </figure>
+                        <p>Balnearios: 4</p>
+                    </article> 
+                </a>
             {% endfor %}                  
         </section>
-
+    
         <section class="testimonials">
-        <h2>Lo que dicen nuestros clientes</h2>
+            <section class="titulo">
+                <h1>Lo que dicen nuestros clientes</h1>
+            </section>
             <div class="testimonial">
                 <p>"El mejor balneario que hemos visitado. Servicio excelente y vistas espectaculares!"</p>
                 <cite>- Juan Pérez</cite>
