--- a/src/App/views/parts/footer.view.twig
+++ b/src/App/views/parts/footer.view.twig
@@ -8,9 +8,9 @@
             <li><a href="#">Contacto</a></li>
         </ul>
         <div class="social-media">
-            <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-            <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+            <a class="facebook" href="#" class="facebook"><i class="fa-brands fa-facebook"></i> Facebook</a>
+            <a class="phone" href="#"><i class="fa-solid fa-phone"></i> +123456789</a>
+            <a class="instagram" href="#" class="instagram"><i class="fa-brands fa-instagram"></i> Instagram</a>
         </div>
     </div>
     <div class="footer-bottom">
